<resources>
    <string name="app_name">CM Walking Street</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="action_tour">Tour</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_booth_list">BoothListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="login_title">CM Walking Street</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="button_login">Login</string>
    <string name="register">New User? Register here</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="title_activity_booth_detail">BoothDetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_write_review">WriteReviewActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="url">http://192.168.1.2/android_connect/</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="title_activity_photo_viewer">PhotoViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
</resources>
